--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -45,3 +45,49 @@
     width: 50%;
     padding-left: 1.5vw;
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #1F1F1F;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    font-size: 2.8vw;
+    width: 22vw;
+    overflow-y: auto;
+    height: 20vh;
+    line-height: 2.5rem;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    /* color: #FCFBF8; */
+    /* text-decoration: none; */
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    color: #FCFBF8
+}
+
+#site-title {
+    text-decoration: none;
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+  }
+
+::-webkit-scrollbar-thumb {
+    background: #FCFBF8;
+    border-radius: 10px;
+  }
