--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
+:root {
+  --light: #FCFBF8;
+  --dark: #1F1F1F;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Work Sans', sans-serif;
+}
+
+html {
+  font-size: 10px;
 }
 
 body {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   padding: 0;
 }
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   background-color: #FCFBF8;
   display: flex;
