--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
 .App {
   min-height: 100vh;
   width: 100vw;
-  background-color: #FCFBF8;
+  background-color: var(--light);
   display: flex;
   flex-flow: column;
 }
