--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -6,30 +6,30 @@
     height: 20vh;
     width: 100%;
     padding-top: 1rem;
-}
-
-.nav  a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.nav a.active {
-    text-decoration: underline;
-    text-decoration-thickness: 3px;
-}
-
-.nav a:hover {
-    color: inherit;
-    text-decoration: underline;
-    text-decoration-thickness: 3px;
-}
-
-.nav ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
-    gap: 3rem;
+    
+    a {
+        color: inherit;
+        text-decoration: none;
+        
+        &.active {
+            text-decoration: underline;
+            text-decoration-thickness: 3px;
+        }
+        
+        &:hover {
+            color: inherit;
+            text-decoration: underline;
+            text-decoration-thickness: 3px;
+        }
+    }
+    
+    ul {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        display: flex;
+        gap: 3rem;
+    }
 }
 
 .nav-brand {
