--- a/src/components/ContactForm.scss
+++ b/src/components/ContactForm.scss
@@ -1,6 +1,9 @@
 .ContactForm {
     color: var(--dark);
     letter-spacing: -0.06em;
+    display: flex;
+    // flex-direction: column;
+    width: 100%;
 
     h1 {
         font-size: 4rem;
@@ -18,6 +21,7 @@
     flex-direction: column;
     font-size: 1.5rem;
     gap: 1rem;
+    width: 100%;
     
     input[type=text] {
         border: none;
@@ -42,12 +46,15 @@
 }
 
 .button-container {
-    position: relative;
-    bottom: 4.2rem;
-    left: 37rem;
+    display: flex;
+    align-items: flex-end;
+    padding-left: 2rem;
+    // bottom: -1rem;
 }
 
 #sendBtn {
+    // vertical-align: bottom;
+    line-height: 3rem;
     background-color: transparent;
     border: none;
     font-size: 4rem;
