--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -22,6 +22,9 @@
     font-size: 1.5rem;
     line-height: 1.8rem;
     letter-spacing: -0.04em;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
 
 .bio-social {
