add dropdown nav and update project routes

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Work Sans', sans-serif;
 }
 
 html {
@@ -21,6 +20,10 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .App {
