--- a/src/components/ContactForm.scss
+++ b/src/components/ContactForm.scss
@@ -4,6 +4,7 @@
     display: flex;
     // flex-direction: column;
     width: 100%;
+    gap: 2rem;
 
     h1 {
         font-size: 4rem;
@@ -45,10 +46,19 @@
     }
 }
 
+.nameRow {
+    display: flex;
+    justify-content: space-between;
+    // input[type=text] {
+    //     width: 48%;
+    // }
+    gap: 2rem;
+}
+
 .button-container {
     display: flex;
     align-items: flex-end;
-    padding-left: 2rem;
+    // padding-left: 2rem;
     // bottom: -1rem;
 }
 
