--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -3,10 +3,12 @@
     flex-direction: column;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-bottom: 2rem;
     letter-spacing: -0.06em;
     color: var(--dark);
     gap: 10rem;
     background-color: var(--light);
+    font-family: 'Work Sans', sans-serif;
     
     img {
         object-fit: cover;
