--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -6,6 +6,7 @@
     height: 20vh;
     width: 100%;
     padding-top: 1rem;
+    font-family: 'Work Sans', sans-serif;
     
     a {
         color: inherit;
