--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -4,6 +4,7 @@
     padding-right: 2rem;
     padding-left: 2rem;
     letter-spacing: -0.06em;
+    font-family: 'Work Sans', sans-serif;
 }
 
 .project-container {
@@ -17,6 +18,8 @@
 
 .project-title h1 {
     font-size: 3.5rem;
+    margin: 0;
+    display: inline;
 }
 
 .project-cover {
@@ -26,4 +29,15 @@
 .project-cover img {
     object-fit: cover;
     height: 100%;
+}
+
+.Work a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.Work a:hover {
+    color: inherit;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
 }
