--- a/src/components/Breadcrumb.scss
+++ b/src/components/Breadcrumb.scss
@@ -1,9 +1,7 @@
 .Breadcrumb {
-    width: 100vw;
     background-color: var(--light);
     font-size: 2.5rem;
     letter-spacing: -0.06em;
-    font-family: 'Work Sans', sans-serif;
     padding-left: 2rem;
     display: flex;
     gap: 1rem;
@@ -20,5 +18,12 @@
     .nav-crumb {
         display: flex;
         gap: 1rem;
+    }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .Breadcrumb {
+        display: none;
     }
 }
