--- a/src/pages/Project.scss
+++ b/src/pages/Project.scss
@@ -1,5 +1,99 @@
+@use '../utils/variables';
+
 .Project {
-    width: 100vw;
-    height: 100vh;
-    background-color: blue;
+    width: 100%;
+}
+
+.proj-img-container {
+    grid-column: 1 / span 4;
+    grid-row: 1 / span 4;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
+    column-gap: .2rem;
+}
+
+.proj-blurb {
+    height: 69svh;
+    background-color: variables.$dark-color;
+    color: variables.$light-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-column: 1;
+    
+    h1 {
+        font-size: 4rem;
+        width: 60%;
+        line-height: 3.5rem;
+    }
+}
+
+#proj-title {
+    display: none;
+}
+
+.proj-img {
+    height: 69svh;
+    background-color: rgb(239, 236, 236);
+
+    img {
+        object-fit: cover;
+    }
+}
+
+.proj-headline {
+    margin-top: 20rem;
+    width: 100%;
+    height: 100svh;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+}
+
+.headline-img {
+    grid-column: 1 / span 6;
+    height: 100svh;
+    background-color: rgb(239, 236, 236);
+}
+
+.headline-blurb {
+    grid-column: 8 / span 3;
+    
+    h1 {
+        font-size: 4rem;
+        letter-spacing: -0.2rem;
+    }
+}
+
+.headline-img-sm {
+    background-color: rgb(239, 236, 236);
+    height: 50svh;
+    width: 100%;
+}
+
+.headline-text {
+    font-size: 1.5rem;
+    width: 70%;
+    line-height: 2rem;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .proj-blurb {
+        height: 80svh;
+    }
+
+    .proj-img {
+        height: 80svh;
+    }
+
+    #proj-title {
+        display:block;
+        font-size: 3.5rem;
+        letter-spacing: -0.2rem;
+        padding-left: 2rem;
+    }
 }
