--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,68 +1,70 @@
+@use '../utils/variables';
+
 .nav {
-    background-color: var(--light);
-    color: var(--dark);
+    background-color: variables.$light-color;
+    color: variables.$dark-color;
+    display: flex;
     font-size: 4rem;
-    letter-spacing: -0.06em;
-    height: 20vh;
-    width: 100%;
-    padding-top: 1rem;
-    font-family: 'Work Sans', sans-serif;
-    
-    a {
-        color: inherit;
-        text-decoration: none;
-        
-        &.active {
-            text-decoration: underline;
-            text-decoration-thickness: 3px;
-        }
-        
-        &:hover {
+    height: 25svh;
+    letter-spacing: -0.2rem;
+
+    li {
+        a {
             color: inherit;
-            text-decoration: underline;
-            text-decoration-thickness: 3px;
-        }
-    }
+            text-decoration: none;
     
-    ul {
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        display: flex;
-        gap: 3rem;
+            &.active, &.hover {
+                text-decoration: underline;
+                text-decoration-thickness: .3rem;
+            }
+        }
     }
 }
 
-.nav-brand {
+.nav-brand, .nav-links {
     width: 50%;
+    display: flex;
+}
+
+.nav-brand {
     padding-left: 2rem;
+}
+
+.nav-links {
+    padding-right: 2rem;
+}
+
+.nav-links {
+    justify-content: space-between;
+    
+    ul {
+        display: flex;
+        gap: 3rem;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
 }
 
 #site-title {
     text-decoration: none;
+    color: inherit;
 }
 
-.nav-links {
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    padding-right: 2rem;
-}
-
-.nav-cart {
-    white-space: nowrap;
+.toggleBtn {
+    display: none;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: var(--dark);
-    color: var(--light);
+    background-color: variables.$dark-color;
+    color: variables.$light-color;
     z-index: 1;
     font-size: 4rem;
     white-space: nowrap;
     overflow-y: auto;
-    height: 18rem;
+    letter-spacing: -0.2rem;
     line-height: 3.5rem;
     padding: .2rem;
     padding-right: 1rem;
@@ -73,11 +75,85 @@
     flex-direction: column;
 }
 
-::-webkit-scrollbar {
-    width: 3px;
+.toggleMenu {
+    display: none;
+    flex-direction: column;
+    min-height: 80%;
+    justify-content: space-between;
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        line-height: 5rem;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+            display: flex;
+            flex-direction: column;
+        }
+    }
 }
 
-::-webkit-scrollbar-thumb {
-    background: #FCFBF8;
-    border-radius: 10px;
+.toggleProjects {
+    background-color: variables.$dark-color;
+    color: variables.$light-color;
+    display: flex;
+    flex-direction: column;
+    font-size: 3rem;
+    line-height: 3rem;
+}
+
+.toggleFooter {
+    font-size: 3.5rem;
+    
+    li {
+        line-height: 3.5rem;
+    }
+}
+
+.copyright {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+    line-height: 1.5rem;
+
+    .squidLogo {
+        width: 10%;
+        padding-bottom: 1rem;
+    }
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .nav {
+        background-color: variables.$light-color;
+        flex-direction: column;
+        font-size: 5rem;
+        z-index: 10;
+        width: 100%;
+        height: 20vh;
+    }
+    
+    .nav-brand {
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .nav-links {
+        display: none;
+    }
+
+    .nav-cart {
+        display: none;
+    }
+
+    .toggleBtn {
+        display: flex;
+        justify-content: center;
+    }
 }
