fix site title height

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -28,6 +28,7 @@
 
 .nav-brand {
     padding-left: 2rem;
+    height: fit-content;
 }
 
 .nav-links {
@@ -49,7 +50,6 @@
 #site-title {
     text-decoration: none;
     color: inherit;
-    height: 5rem;
 }
 
 .toggleBtn {
