--- a/src/pages/Project.scss
+++ b/src/pages/Project.scss
@@ -4,96 +4,285 @@
     width: 100%;
 }
 
-.proj-img-container {
-    grid-column: 1 / span 4;
-    grid-row: 1 / span 4;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 25% 25% 25% 25%;
-    column-gap: .2rem;
+.Project > div:not(:nth-child(-n + 2)) {
+    margin-top: 20rem;
 }
 
-.proj-blurb {
-    height: 69svh;
-    background-color: variables.$dark-color;
-    color: variables.$light-color;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    grid-column: 1;
-    
-    h1 {
-        font-size: 4rem;
-        width: 60%;
-        line-height: 3.5rem;
-    }
+.Project > div:last-child {
+    margin-bottom: 10rem;
 }
 
 #proj-title {
     display: none;
 }
 
-.proj-img {
-    height: 69svh;
-    background-color: rgb(239, 236, 236);
+.proj-section {
+    min-width: 100%;
+    height: 100svh;
+    // background-color: green;
+}
+
+.sec-1 {
+    height: 70svh;
+    // width: fit-content;
+    // display: grid;
+    // grid-template-columns: repeat(6, 1fr);
+    display: flex;
+    overflow-x: auto;
+    gap: 0.3rem;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    .sec-1-blurb {
+        // grid-column: 1;
+        background-color: variables.$dark-color;
+        color: variables.$light-color;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        h1 {
+            font-size: 4rem;
+            width: 100vw;
+            padding: 5rem;
+            text-align: center;
+        }
+    }
 
     img {
+        // grid-column: auto;
+        object-fit: cover;
+        width: 100vw;
+        height: 100%;
+    }
+}
+
+.sec-2 {
+    display: grid;
+    grid-template-columns: repeat(10, 10%);
+    grid-template-rows: repeat(10, 10%);
+    padding-left: 2rem;
+    padding-right: 2rem;
+    width: 100%;
+    
+    .sec-2-img {
+        grid-column: 1 / span 6;
+        grid-row: 1 / span 10;
+        height: 100%;
+        background-color: rgb(239, 236, 236);
+    }
+    
+    .sec-2-blurb {
+        grid-column: 8 / span 3;
+        grid-row: 1 / span 9;
+        
+        h1 {
+            font-size: 4rem;
+            letter-spacing: -0.2rem;
+        }
+    }
+    
+    .sec-2-blurb-img {
+        background-color: rgb(239, 236, 236);
+        height: 50%;
+        width: 100%;
+    }
+    
+    .sec-2-text {
+        font-size: 1.5rem;
+        width: 70%;
+        line-height: 2rem;
+        padding-top: 2rem;
+    }
+}
+
+.sec-3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        height: 100%;
+        width: 100%;
         object-fit: cover;
     }
 }
 
-.proj-headline {
-    margin-top: 20rem;
-    width: 100%;
-    height: 100svh;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-}
-
-.headline-img {
-    grid-column: 1 / span 6;
-    height: 100svh;
-    background-color: rgb(239, 236, 236);
-}
-
-.headline-blurb {
-    grid-column: 8 / span 3;
-    
-    h1 {
-        font-size: 4rem;
-        letter-spacing: -0.2rem;
+.sec-4 {
+    display: flex;
+    justify-content: center;
+    height: 40svh;
+    img {
+        height: 100%;
+        width: 60%;
+        object-fit: cover;
     }
 }
 
-.headline-img-sm {
-    background-color: rgb(239, 236, 236);
-    height: 50svh;
-    width: 100%;
+.sec-5 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 40svh;
+
+    img {
+        width: 100%;
+        height: 100%;
+        background-color: rgb(239, 236, 236);
+        object-fit: cover;
+    }
+    
+    .sec-5-blurb {
+        grid-column: 2;
+        background-color: variables.$light-color;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        h1 {
+            width: 63%;
+            padding: 0;
+            text-align: center;
+            font-size: 2.5rem;
+        }
+    }
 }
 
-.headline-text {
-    font-size: 1.5rem;
-    width: 70%;
-    line-height: 2rem;
+.sec-6 {
+    height: 50svh;
+    display: flex;
+    justify-content: center;
+
+    img {
+        width: 50%;
+        object-fit: cover;
+    }
+}
+
+.sec-7 {
+    height: 100svh;
+    display: flex;
+    overflow-x: auto;
+    gap: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    .sec-7-blurb {
+        // grid-column: 1;
+        background-color: variables.$dark-color;
+        color: variables.$light-color;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // width: 50rem;
+
+        h1 {
+            font-size: 4rem;
+            width: 50rem;
+            padding: 5rem;
+            text-align: center;
+        }
+    }
+
+    img {
+        // grid-column: auto;
+        object-fit: cover;
+        width: 50rem;
+        height: 100%;
+    }
+}
+
+.prev-next {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-size: 4rem;
+    letter-spacing: -0.2rem;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+
+        &:hover {
+            color: inherit;
+            text-decoration: underline;
+            text-decoration-thickness: 0.2rem;
+        }
+    }
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    .proj-blurb {
-        height: 80svh;
-    }
-
-    .proj-img {
-        height: 80svh;
-    }
-
     #proj-title {
-        display:block;
+        display: block;
         font-size: 3.5rem;
-        letter-spacing: -0.2rem;
         padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    .proj-section {
+        height: 80svh;
+        // background-color: green;
+    }
+
+    .sec-1 {
+        height: 75svh;
+        width: 100%;
+        gap: 0.1rem;
+    }
+
+    .sec-2 {
+        // height: 80svh;
+        .sec-2-img {
+            // height: 100%;
+            grid-column: 1 / span 10;
+            grid-row: 6 / 10;
+        }
+
+        .sec-2-blurb {
+            grid-column: 1 / span 10;
+            grid-row: 1 / 5;
+            display: flex;
+
+            h1 {
+                writing-mode: vertical-lr;
+                margin: 0;
+                padding-right: 4rem;
+                rotate: 180deg;
+                text-align: right;
+            }
+            
+            .sec-2-text {
+                display: none;
+            }
+
+            .sec-2-blurb-img {
+                height: 100%;
+            }
+        }
+
+    }
+
+    .sec-3, .sec-4, .sec-5, .sec-6, .sec-7 {
+        display: none;
+    }
+
+    .Project > div:not(:nth-child(-n + 2)) {
+        margin-top: 10rem;
+    }
+
+    .Project > div:last-child {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .prev-next {
+        font-size: 3.5rem;
     }
 }
