--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -74,6 +74,18 @@
         text-decoration: underline;
         text-decoration-thickness: 0.3rem;
     }
+
+    &::-webkit-scrollbar {
+        width: 0.3rem;
+        height: 0.3rem;
+        background-color: variables.$dark-color;
+        display: block;
+    }
+      
+    &::-webkit-scrollbar-thumb {
+        background-color: variables.$light-color;
+        border-radius: 0.5rem;
+    }
 }
 
 .dropdown:hover .dropdown-content {
