--- a/src/pages/Shop.scss
+++ b/src/pages/Shop.scss
@@ -5,9 +5,10 @@
     height: 75svh;
     display: flex;
     justify-content: center;
-    // align-items: center;
+    align-items: center;
 
     h1 {
         font-size: 6rem;
+        text-align: center;
     }
 }
