--- a/src/pages/Project.scss
+++ b/src/pages/Project.scss
@@ -19,14 +19,10 @@
 .proj-section {
     min-width: 100%;
     height: 100svh;
-    // background-color: green;
 }
 
 .sec-1 {
     height: 70svh;
-    // width: fit-content;
-    // display: grid;
-    // grid-template-columns: repeat(6, 1fr);
     display: flex;
     overflow-x: auto;
     gap: 0.3rem;
@@ -36,7 +32,6 @@
     }
 
     .sec-1-blurb {
-        // grid-column: 1;
         background-color: variables.$dark-color;
         color: variables.$light-color;
         display: flex;
@@ -45,17 +40,16 @@
 
         h1 {
             font-size: 4rem;
-            width: 100vw;
             padding: 5rem;
+            width: 40rem;
             text-align: center;
         }
     }
 
     img {
-        // grid-column: auto;
         object-fit: cover;
-        width: 100vw;
         height: 100%;
+        width: 40rem;
     }
 }
 
@@ -112,10 +106,10 @@
 .sec-4 {
     display: flex;
     justify-content: center;
-    height: 40svh;
+    height: 50rem;
     img {
-        height: 100%;
-        width: 60%;
+        height: 50rem;
+        width: 100rem;
         object-fit: cover;
     }
 }
@@ -149,12 +143,15 @@
 }
 
 .sec-6 {
-    height: 50svh;
+    // height: 50svh;
+    height: 60rem;
     display: flex;
     justify-content: center;
 
     img {
-        width: 50%;
+        // width: 50%;
+        width: 60rem;
+        height: 60rem;
         object-fit: cover;
     }
 }
@@ -172,13 +169,11 @@
     }
 
     .sec-7-blurb {
-        // grid-column: 1;
         background-color: variables.$dark-color;
         color: variables.$light-color;
         display: flex;
         justify-content: center;
         align-items: center;
-        // width: 50rem;
 
         h1 {
             font-size: 4rem;
@@ -189,7 +184,6 @@
     }
 
     img {
-        // grid-column: auto;
         object-fit: cover;
         width: 50rem;
         height: 100%;
@@ -228,19 +222,20 @@
 
     .proj-section {
         height: 80svh;
-        // background-color: green;
     }
 
     .sec-1 {
         height: 75svh;
         width: 100%;
         gap: 0.1rem;
+
+        .sec-1-blurb {
+            display: none;
+        }
     }
 
     .sec-2 {
-        // height: 80svh;
         .sec-2-img {
-            // height: 100%;
             grid-column: 1 / span 10;
             grid-row: 6 / 10;
         }
@@ -256,6 +251,7 @@
                 padding-right: 4rem;
                 rotate: 180deg;
                 text-align: right;
+                font-size: 3.5rem;
             }
             
             .sec-2-text {
