--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ html {
   width: 0.3rem;
   height: 0.3rem;
   background-color: variables.$light-color;
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb {
