--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,9 +1,160 @@
+@use '../utils/variables';
+
 .About {
     width: 100%;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    display: grid;
-    grid-template-columns: repeat(10, 10%);
-    grid-template-rows: repeat(10, 10%);
+    min-height: 75svh;
+
+    #about-title {
+        font-size: 3.5rem;
+        text-align: center;
+        display: none;
+        letter-spacing: -0.06rem;
+    }
+    
+    .about-sec-1 {
+        display: flex;
+        width: 100%;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        margin-bottom: 10rem;
+        
+        .sec-1-bio {
+            width: 50%;
+            display: flex;
+            
+            .about-bio {
+                width: 50%;
+                font-size: 1.5rem;
+                padding-right: 6rem;
+
+                p {
+                    padding-bottom: 1rem;
+                    line-height: 2rem;
+                }
+            }
+
+        }
+
+        .sec-1-portrait {
+            width: 50%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-start;
+            
+            img {
+                width: 50%;
+                object-fit:contain;
+            }
+        }
+
+        .about-socials {
+            width: 50%;
+            background-color: variables.$dark-color;
+            color: variables.$light-color;
+            display: flex;
+            flex-direction: column;
+            font-size: 4rem;
+            line-height: 3.5rem;
+            height: 20rem;
+            overflow-y: auto;
+
+            a {
+                color: inherit;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                    text-decoration-thickness: 0.3rem;
+                }
+            }
+
+            &::-webkit-scrollbar {
+                width: 0.3rem;
+                height: 0.3rem;
+                background-color: variables.$dark-color;
+                display: block;
+            }
+              
+            &::-webkit-scrollbar-thumb {
+                background-color: variables.$light-color;
+                border-radius: 0.5rem;
+            }
+        }
+    }
+
+    .about-sec-2 {
+        width: 100%;
+        display: flex;
+
+        .sec-2-blank {
+            width: 50%;
+        }
+
+        .sec-2-contact {
+            width: 50%;
+        }
+    }
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .About {
+        #about-title {
+            display: block;
+        }
+
+        .about-sec-1 {
+            flex-direction: column;
+            padding: 0;
+            margin-bottom: 7rem;
+
+            .sec-1-bio {
+                order: 2;
+                flex-direction: column;
+                width: 100%;
+                
+                .about-bio {
+                    width: 100%;
+                    text-align: center;
+                    padding-right: 0;
+                    margin-bottom: 5rem;
+
+                    p {
+                        padding-left: 4rem;
+                        padding-right: 4rem;
+                    }
+                }
+            }
+
+            .sec-1-portrait {
+                order: 1;
+                width: 100%;
+                justify-content: center;
+                padding-left: 2rem;
+                padding-right: 2rem;
+                padding-bottom: 2rem;
+
+                img {
+                    width: 100%;
+                }
+            };
+
+            .about-socials {
+                width: 100%;
+                justify-content: center;
+                align-items: center;
+                height: auto;
+            }
+        }
+
+        .about-sec-2 {
+            .sec-2-blank {
+                display: none;
+            }
+
+            .sec-2-contact {
+                width: 100%;
+            }
+        }
+    }
+}
