--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -19,6 +19,23 @@
             }
         }
     }
+
+    .logoutContainer {
+        display: flex;
+        flex: column;
+        padding: 0 2rem;
+        justify-content: flex-end;
+        width: 100%;
+
+        #logoutButton {
+            background-color: variables.$dark-color;
+            color: variables.$light-color;
+            font-size: 1.5rem;
+            padding: 0.5rem 1rem;
+            border-radius: 0;
+            height: fit-content;
+        }
+    }
 }
 
 .nav-brand, .nav-links {
@@ -29,6 +46,21 @@
 .nav-brand {
     padding-left: 2rem;
     height: fit-content;
+
+    #admin-title {
+        color: variables.$dark-color;
+        color: red;
+        text-decoration: none;
+
+        a {
+            color: inherit;
+
+            &.active, &.hover {
+                text-decoration: none;
+                text-decoration-thickness: .3rem;
+            }
+        }
+    }
 }
 
 .nav-links {
@@ -155,6 +187,10 @@
         z-index: 10;
         width: 100%;
         height: 20vh;
+        
+        .logoutContainer {
+            justify-content: center;
+        }
     }
     
     .nav-brand {
@@ -175,4 +211,5 @@
         display: flex;
         justify-content: center;
     }
+
 }
