--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 10rem;
+    // margin-top: 10rem;
     padding-left: 2rem;
     padding-right: 2rem;
     padding-bottom: 2rem;
@@ -13,7 +13,6 @@
     #squid {
         object-fit: cover;
         width: 4rem;
-        // padding-top: 10rem;
     }
 
     .foot-link {
